       on startup but only on request. (Stefan)
- CHG: The log dialog has now a checkbox for stop-on-copy
       instead of a messagebox question. (Stefan)
- CHG: Removed the _tsvnexcluderecursive and _tsvnexcludethis
       filehandling. Use the paths in the settings dialog
       instead. (Stefan)
- CHG: The log message history isn't limited to 255 chars
       for each entry anymore. (Stefan)
- BUG: Explorer could crash when setting properties with
       illegal values. (Stefan)
- BUG: After a merge dry-run, the wc URL wasn't shown
       correctly. This bug didn't affect the actual
       merge, only the UI. (Stefan)
- BUG: The right-drag "move/copy in Subversion here" menu
       entries were missing. (Stefan)
- BUG: Showing the list of modified files in the commit and
       check-for-updates dialog sometimes showed files and
       folders from externals too even if not told to. (Stefan)

Version 1.1.1
- ADD: The path to client certificates and the client
       certificate password can now be saved. (Stefan)
- ADD: New bugtracking property "bugtraq:append". If set to
       "false", then the bug-ID is inserted at the top of
       the log message. If set to "true" or not set at all,
       then the bug-ID is appended to the log message
       like before. (Stefan)
- ADD: The "check for updates" dialog now shows the
       HEAD revision of the repository. (Stefan)
- ADD: Setting bugtraq: and tsvn: properties recursively
       now makes sure that the properties are only set
       on subfolder and skipped for files, i.e. you
       can set those properties on the /trunk folder with
       the "recursive" checkbox activated and all subfolders
       will have the props set too, without having the files
       set those properties too. (Stefan)
- ADD: When an update is finished, a click on an updated
       file shows a context menu with an entry to compare
       the file in the revision as it was before the update
       with the working copy. (Stefan)